Edited questions, fixed text alignment, published on netlify

--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,6 @@ body {
     font-weight: 300;
 }
 
-
 body {
     background: #222;
     font-family: 'MuseoSans', sans-serif;
@@ -124,7 +123,25 @@ road
     user-select: none;
     transition: opacity 10s;
     filter: drop-shadow(0 0 5px #ffffff);
+    z-index: 9000;
 }
+
+#feedback{
+    position: absolute;
+    color: #00a19c;
+    left: 50%;
+    top: 55%;
+    transform: translate(-50%, -50%);
+    border-radius: 15px;
+    font-size: 1.5em;
+    text-shadow:
+            -1px -1px 0 #ffffff,
+            1px -1px 0 #ffffff,
+            -1px 1px 0 #ffffff,
+            1px 1px 0 #ffffff;
+    z-index: 8000;
+}
+
 #road {
     transition: opacity 2s;
     transition-timing-function: steps(8, end);
@@ -215,7 +232,7 @@ home
     transform: translate(-50%, -55%);
     background-color: white;
     width: 500px;
-    height: 310px;
+    height: 330px;
     border-radius: 20px;
     padding: 20px;
     box-sizing: border-box;
@@ -235,7 +252,7 @@ home
 
 #links .column{
     margin: 0;
-    font-size: 0.7em;
+    font-size: 0.6em;
     color: black;
 }
 
@@ -341,7 +358,7 @@ home
     text-align: center;
     position: absolute;
     left: 50%;
-    top: 10%;
+    top: 8%;
     transform: translate(-50%, -50%);
     font-size: 2em;
     color: #bfd730;
@@ -386,17 +403,19 @@ Guide
     top: 30%;
     transform: translate(-50%, -50%);
     border-radius: 15px;
-
     width: 700px;
     word-wrap: break-word;
+    z-index: 5000;
 }
 
 #questionBox, #optionsBox {
+    text-align: center;
     background-color: #fff;
     margin: 0 auto 5px;
     padding: 10px;
     border-radius: 10px;
     border: 2px solid #ff590c;
     width: 50%;
+    z-index: 5000;
 }
 
